--- a/OnlineWolf/app/build.gradle
+++ b/OnlineWolf/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.onlinewolf.onlinewolf"
+        applicationId "com.example.onlinewolf.onlinewolf.app"
         minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
