--- a/OnlineWolf/app/src/main/AndroidManifest.xml
+++ b/OnlineWolf/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ShowLogin"
+            android:label="@string/title_activity_show_login"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.onlinewolf.onlinewolf.app.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
