--- a/OnlineWolf/app/src/main/AndroidManifest.xml
+++ b/OnlineWolf/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.onlinewolf.onlinewolf.app.MainActivity" />
         </activity>
+        <activity
+            android:name=".CreateFile"
+            android:label="@string/title_activity_create_file"
+            android:parentActivityName=".ShowLogin" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.onlinewolf.onlinewolf.app.ShowLogin" />
+        </activity>
     </application>
 
 </manifest>
