--- a/server/Gemfile
+++ b/server/Gemfile
@@ -7,6 +7,8 @@ gem 'rails-api'
 
 gem 'websocket-rails'
 
+gem 'coffee-rails'
+
 group :production do
 	gem 'pg',                '0.17.1'
 	gem 'rails_12factor',     '0.0.2' 
