--- a/Server/Gemfile
+++ b/Server/Gemfile
@@ -5,20 +5,13 @@ gem 'rails', '4.2.2'
 
 gem 'rails-api'
 
-gem 'websocket-rails'
+gem 'spring', :group => :development
 
-gem 'coffee-rails'
+gem 'em-websocket', '~> 0.5.1'
 
-group :production do
-	gem 'pg',                '0.17.1'
-	gem 'rails_12factor',     '0.0.2' 
-end
-group :development, :test do
-	gem 'sqlite3'
-	gem 'spring'
-end 
+gem 'sqlite3'
 
-
+gem 'active_model_serializers'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
