--- a/OnlineWolf/app/build.gradle
+++ b/OnlineWolf/app/build.gradle
@@ -18,8 +18,8 @@ buildTypes {
     }
 }
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.ning:async-http-client:1.9.31'
 }
