--- a/Server/Gemfile
+++ b/Server/Gemfile
@@ -13,6 +13,8 @@ gem 'sqlite3'
 
 gem 'active_model_serializers'
 
+gem 'bcrypt', '3.1.7'
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
