--- a/Server/Gemfile
+++ b/Server/Gemfile
@@ -15,6 +15,8 @@ gem 'active_model_serializers'
 
 gem 'bcrypt', '3.1.7'
 
+gem 'thin'
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
