--- a/Server/Gemfile
+++ b/Server/Gemfile
@@ -7,7 +7,7 @@ gem 'rails-api'
 
 gem 'spring', :group => :development
 
-gem 'em-websocket', '~> 0.5.1'
+#gem 'em-websocket', '~> 0.5.1'
 
 gem 'sqlite3'
 
@@ -16,6 +16,8 @@ gem 'active_model_serializers'
 gem 'bcrypt', '3.1.7'
 
 gem 'thin'
+
+gem 'faye-websocket'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
