--- a/Server/Gemfile
+++ b/Server/Gemfile
@@ -1,15 +1,15 @@
-source 'https://rubygems.org'
+	source 'https://rubygems.org'
 
 
 gem 'rails', '4.2.2'
 
 gem 'rails-api'
 
-gem 'spring', :group => :development
+#, :group => :development
 
 #gem 'em-websocket', '~> 0.5.1'
 
-gem 'sqlite3'
+#gem 'sqlite3'
 
 gem 'active_model_serializers'
 
@@ -19,6 +19,17 @@ gem 'thin'
 
 gem 'faye-websocket'
 
+group :development, :test do
+
+	gem 'sqlite3'
+
+	gem 'spring'
+end
+
+group :production do
+	gem 'pg'
+	gem 'rails_12factor'
+end
 # To use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
