--- a/OnlineWolf/app/src/main/AndroidManifest.xml
+++ b/OnlineWolf/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.onlinewolf.onlinewolf.app" >
+    package="com.example.onlinewolf.onlinewolf.app">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +22,7 @@
         <activity
             android:name=".ShowLogin"
             android:label="@string/title_activity_show_login"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.onlinewolf.onlinewolf.app.MainActivity" />
@@ -28,10 +30,18 @@
         <activity
             android:name=".CreateFile"
             android:label="@string/title_activity_create_file"
-            android:parentActivityName=".ShowLogin" >
+            android:parentActivityName=".ShowLogin">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.onlinewolf.onlinewolf.app.ShowLogin" />
+        </activity>
+        <activity
+            android:name=".StartGame"
+            android:label="@string/title_activity_start_game"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.onlinewolf.onlinewolf.app.MainActivity" />
         </activity>
     </application>
 
