--- a/OnlineWolf/app/build.gradle
+++ b/OnlineWolf/app/build.gradle
@@ -8,18 +8,19 @@ android {
         applicationId "com.example.onlinewolf.onlinewolf.app"
         minSdkVersion 10
         targetSdkVersion 23
-versionCode 1
-versionName "1.0"
-}
-buildTypes {
-    release {
-        minifyEnabled false
-        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        versionCode 1
+        versionName "1.0"
     }
-}
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.ning:async-http-client:1.9.31'
+    compile 'com.android.support:design:23.1.1'
 }
